--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11255,5 +11255,23 @@ label.panel-block:hover {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
+}.fav-button {
+  float: right;
+  position: relative;
+  right: 10px;
+  top: 5px;
+  height: 0;
+  color: #fff;
+  text-shadow: 2px 2px 2px #000;
+}
+
+.fav-button-red {
+  float: right;
+  position: relative;
+  right: 10px;
+  top: 5px;
+  height: 0;
+  color: red;
+  text-shadow: 2px 2px 2px #000;
 }
 
