--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,26 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bulma/css/bulma.css';
+
+.fav-button {
+  float: right;
+  position: relative;
+  right: 10px;
+  top: 5px;
+  height: 0;
+  color: #fff;
+  text-shadow: 2px 2px 2px #000;
+}
+
+.fav-button-red {
+  float: right;
+  position: relative;
+  right: 10px;
+  top: 5px;
+  height: 0;
+  color: red;
+  text-shadow: 2px 2px 2px #000;
+}
